06-analyzed-rollout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyzed-rollout
  labels:
    name: analyzed-rollout
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: analyzed-rollout
