06-analyzed-rollout/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analyzed-rollout
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: haxx-lb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:211125550721:certificate/d09d91b1-1d05-4c22-9614-c1aefacfff09
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.drop_invalid_header_fields.enabled=true
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/healthcheck-path: "/health/liveness"
spec:
  rules:
    - host: analyzed-rollout.haxx.sandbox-2024.axxes.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: analyzed-rollout
                port:
                  number: 80
